k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: password-generator
  labels:
    name: password-generator
    environment: production
