k8s/deployment-multiple-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator-multiple-workers
  namespace: password-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: passwordservice-multiple-workers
  template:
    metadata:
      labels:
        app: passwordservice-multiple-workers
    spec:
      containers:
      - name: passwordservice-multiple-workers
        image: gabzsz/password-generator:multiple-workers
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
