k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator-deployment
  namespace: password-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: passwordservice
  template:
    metadata:
      labels:
        app: passwordservice
    spec:
      containers:
      - name: passwordservice
        image: gabzsz/password-generator:46a984c
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
