k8s/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-generator-deployment
  namespace: password-generator
spec:
  selector:
    matchLabels:
      app: passwordservice

  replicas: 2
  template:
    metadata:
      labels:
        editor: passwordservice
    spec:
      containers:
      - name: passwordservice
        image: gabzsz/auth_service:lts
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: password-generator-svc
  namespace: password-generator
spec:
  type: LoadBalancer
  selector:
    app: passwordservice
  ports:
  - port: 80
    targetPort: 80
