k8s/svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-generator-svc-2
  namespace: password-generator
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.106
  selector:
    app: passwordservice
  ports:
  - port: 80
    targetPort: 80
